fixed bug in data_scrubber; rewrote data

--- a/notebooks/data_scrubber.ipynb
+++ b/notebooks/data_scrubber.ipynb
@@ -11,18 +11,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import glob\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import util"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +43,7 @@
     "                 'Relative_Humidity']\n",
     "def combine_no_time_duplicates(files_glob):\n",
     "    all_data = pd.DataFrame(columns=govee_columns)\n",
-    "    for f in exterior_files:\n",
+    "    for f in files_glob:\n",
     "        data = pd.read_csv(f)\n",
     "        data.set_index(keys=govee_columns[0])\n",
     "        all_data = pd.concat([all_data, data], \n",
@@ -58,22 +59,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "all_exterior_data = combine_no_time_duplicates(exterior_files)\n",
-    "all_exterior_data['location'] = Locations.EXTERIOR.value\n",
+    "all_exterior_data['location'] = util.Locations.EXTERIOR.value\n",
+    "all_exterior_data.to_csv('../data/clean/exterior.data.csv')\n",
     "\n",
     "all_interior_data = combine_no_time_duplicates(interior_files)\n",
-    "all_interior_data['location'] = Locations.INTERIOR.value"
+    "all_interior_data['location'] = util.Locations.INTERIOR.value\n",
+    "all_interior_data.to_csv('../data/clean/interior.data.csv')\n"
    ]
   },
   {
@@ -106,16 +102,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['sensor_data.csv']"
+       "['exterior.data.csv', 'interior.data.csv', 'sensor_data.csv']"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
