new data; new plots

--- a/notebooks/data_scrubber.ipynb
+++ b/notebooks/data_scrubber.ipynb
@@ -11,19 +11,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import glob\n",
     "import pandas as pd\n",
-    "import util"
+    "import util\n",
+    "import datetime as dt\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,6 +84,17 @@
     "all_data = pd.concat([all_exterior_data, all_interior_data])\n",
     "all_data.rename(columns={govee_columns[0]: \"timestamp\", govee_columns[1]: str(govee_columns[1]).lower(), govee_columns[2]: str(govee_columns[2]).lower()},\n",
     "                inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# invalidate any data points prior to a certain date/time\n",
+    "invalid_prior_to = dt.datetime(year=2019, month=11, day=9, hour=15, minute=30)\n",
+    "all_data = all_data[all_data.timestamp>=invalid_prior_to]"
    ]
   },
   {
@@ -93,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -111,13 +124,103 @@
        "['exterior.data.csv', 'interior.data.csv', 'sensor_data.csv']"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "os.listdir('../data/clean/')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>relative_humidity</th>\n",
+       "      <th>temperature_celsius</th>\n",
+       "      <th>timestamp</th>\n",
+       "      <th>location</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>36.4</td>\n",
+       "      <td>7.6</td>\n",
+       "      <td>2019-11-09 15:30:00</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>36.5</td>\n",
+       "      <td>7.6</td>\n",
+       "      <td>2019-11-09 15:31:00</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>36.8</td>\n",
+       "      <td>7.6</td>\n",
+       "      <td>2019-11-09 15:32:00</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>36.9</td>\n",
+       "      <td>7.6</td>\n",
+       "      <td>2019-11-09 15:33:00</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>37.6</td>\n",
+       "      <td>7.6</td>\n",
+       "      <td>2019-11-09 15:34:00</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    relative_humidity  temperature_celsius           timestamp  location\n",
+       "30               36.4                  7.6 2019-11-09 15:30:00         1\n",
+       "31               36.5                  7.6 2019-11-09 15:31:00         1\n",
+       "32               36.8                  7.6 2019-11-09 15:32:00         1\n",
+       "33               36.9                  7.6 2019-11-09 15:33:00         1\n",
+       "34               37.6                  7.6 2019-11-09 15:34:00         1"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "all_data.head()"
    ]
   },
   {
