removed extra file dumps

--- a/notebooks/data_scrubber.ipynb
+++ b/notebooks/data_scrubber.ipynb
@@ -67,11 +67,11 @@
    "source": [
     "all_exterior_data = combine_no_time_duplicates(exterior_files)\n",
     "all_exterior_data['location'] = util.Locations.EXTERIOR.value\n",
-    "all_exterior_data.to_csv('../data/clean/exterior.data.csv')\n",
+    "# all_exterior_data.to_csv('../data/clean/exterior.data.csv')\n",
     "\n",
     "all_interior_data = combine_no_time_duplicates(interior_files)\n",
     "all_interior_data['location'] = util.Locations.INTERIOR.value\n",
-    "all_interior_data.to_csv('../data/clean/interior.data.csv')\n"
+    "# all_interior_data.to_csv('../data/clean/interior.data.csv')\n"
    ]
   },
   {
