--- a/notebooks/data_scrubber.ipynb
+++ b/notebooks/data_scrubber.ipynb
@@ -10,6 +10,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "TODO:\n",
+    "\n",
+    "* Still getting clearly erroneous time stamps that go backward in time. Need to filter these out."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -36,13 +45,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "govee_columns = ['Timestamp for sample frequency every 1 min', \n",
     "                 'Temperature_Celsius', \n",
     "                 'Relative_Humidity']\n",
+    "\n",
     "def combine_no_time_duplicates(files_glob):\n",
     "    all_data = pd.DataFrame(columns=govee_columns)\n",
     "    for f in files_glob:\n",
@@ -55,13 +65,13 @@
     "                             sort=True)\n",
     "\n",
     "    all_data[govee_columns[0]] = pd.to_datetime(all_data[govee_columns[0]], format=\"%Y-%m-%d %H:%M:%S\", errors='coerce')\n",
-    "        \n",
+    "       \n",
     "    return all_data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,14 +97,32 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now apply some filters to remove anamalous data..."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# invalidate any data points prior to a certain date/time\n",
     "invalid_prior_to = dt.datetime(year=2019, month=11, day=9, hour=15, minute=30)\n",
     "all_data = all_data[all_data.timestamp>=invalid_prior_to]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "timestamp_diff_threshold = dt.timedelta(minutes=5.0)\n",
+    "# above_threshold_series = all_data[govee_columns[0]].diff() > timestamp_diff_threshold \n",
+    "# all_data.drop(above_threshold_series.index)\n"
    ]
   },
   {
@@ -106,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +152,7 @@
        "['sensor_data.csv']"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +242,7 @@
        "34               37.6                  7.6 2019-11-09 15:34:00         1"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,7 +275,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
