added new data, notebooks updated to correct bad data, visualized

--- a/notebooks/data_scrubber.ipynb
+++ b/notebooks/data_scrubber.ipynb
@@ -15,12 +15,13 @@
    "source": [
     "TODO:\n",
     "\n",
-    "* Still getting clearly erroneous time stamps that go backward in time. Need to filter these out."
+    "* Still getting clearly erroneous time stamps that go backward in time. Need to filter these out.\n",
+    "* In Jan 2020 I started receiving CSV data from Govee that contained extra columns. See `office_interior_export202001131740.csv`  :( "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +57,7 @@
     "def combine_no_time_duplicates(files_glob):\n",
     "    all_data = pd.DataFrame(columns=govee_columns)\n",
     "    for f in files_glob:\n",
-    "        data = pd.read_csv(f)\n",
+    "        data = pd.read_csv(f, warn_bad_lines=True, error_bad_lines=False)\n",
     "        data.set_index(keys=govee_columns[0])\n",
     "        all_data = pd.concat([all_data, data], \n",
     "                             ignore_index=True,\n",
@@ -71,9 +72,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "b'Skipping line 20053: expected 3 fields, saw 5\\nSkipping line 23465: expected 3 fields, saw 5\\n'\n"
+     ]
+    }
+   ],
    "source": [
     "all_exterior_data = combine_no_time_duplicates(exterior_files)\n",
     "all_exterior_data['location'] = util.Locations.EXTERIOR.value\n",
@@ -86,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,23 +109,124 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now apply some filters to remove anamalous data..."
+    "I've noticed invalid data coming from `Govee` and this needs to be handled. First, get a view of the bad data. Anything prior to Nov 9, 2019 is before I owned the device so we know that data must be invalid.\n",
+    "\n",
+    "What's up with this, `Govee`?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>relative_humidity</th>\n",
+       "      <th>temperature_celsius</th>\n",
+       "      <th>timestamp</th>\n",
+       "      <th>location</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2130</th>\n",
+       "      <td>77.7</td>\n",
+       "      <td>4.3</td>\n",
+       "      <td>2019-01-11 01:47:00</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8153</th>\n",
+       "      <td>51.6</td>\n",
+       "      <td>-6.3</td>\n",
+       "      <td>2019-11-01 04:26:00</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24166</th>\n",
+       "      <td>64.6</td>\n",
+       "      <td>5.3</td>\n",
+       "      <td>2019-11-02 09:53:00</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>52725</th>\n",
+       "      <td>57.5</td>\n",
+       "      <td>-1.1</td>\n",
+       "      <td>2019-01-08 05:48:00</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>63792</th>\n",
+       "      <td>62.2</td>\n",
+       "      <td>5.6</td>\n",
+       "      <td>2019-01-15 22:15:00</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       relative_humidity  temperature_celsius           timestamp  location\n",
+       "2130                77.7                  4.3 2019-01-11 01:47:00         1\n",
+       "8153                51.6                 -6.3 2019-11-01 04:26:00         2\n",
+       "24166               64.6                  5.3 2019-11-02 09:53:00         2\n",
+       "52725               57.5                 -1.1 2019-01-08 05:48:00         2\n",
+       "63792               62.2                  5.6 2019-01-15 22:15:00         2"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# invalidate any data points prior to a certain date/time\n",
+    "invalid_prior_to = dt.datetime(year=2019, month=11, day=9, hour=15, minute=0)\n",
+    "bad_data = all_data[all_data.timestamp < invalid_prior_to]\n",
+    "bad_data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now apply the timestamp filter to remove anamalous data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# invalidate any data points prior to a certain date/time\n",
-    "invalid_prior_to = dt.datetime(year=2019, month=11, day=9, hour=15, minute=30)\n",
-    "all_data = all_data[all_data.timestamp>=invalid_prior_to]"
+    "strip_prior_to = dt.datetime(year=2019, month=11, day=9, hour=15, minute=30)\n",
+    "all_data = all_data[all_data.timestamp>=strip_prior_to]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +262,7 @@
        "['sensor_data.csv']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +352,7 @@
        "34               37.6                  7.6 2019-11-09 15:34:00         1"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,7 +385,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
