just markdown update in notebook

--- a/notebooks/data_scrubber.ipynb
+++ b/notebooks/data_scrubber.ipynb
@@ -15,8 +15,9 @@
    "source": [
     "TODO:\n",
     "\n",
-    "* Still getting clearly erroneous time stamps that go backward in time. Need to filter these out.\n",
-    "* In Jan 2020 I started receiving CSV data from Govee that contained extra columns. See `office_interior_export202001131740.csv`  :( "
+    "* Jan 2020: Still getting clearly erroneous time stamps that go backward in time. Need to filter these out.\n",
+    "* Jan 2020: I started receiving CSV data from Govee that contained extra columns. See `office_interior_export202001131740.csv`  :( \n",
+    "* Jan 2020: I started receiving CSV data from Govee that contained non-physical humidity data. Need to filter these out."
    ]
   },
   {
