new data; new graphics

--- a/notebooks/data_scrubber.ipynb
+++ b/notebooks/data_scrubber.ipynb
@@ -17,12 +17,13 @@
     "\n",
     "* Jan 2020: Still getting clearly erroneous time stamps that go backward in time. Need to filter these out.\n",
     "* Jan 2020: I started receiving CSV data from Govee that contained extra columns. See `office_interior_export202001131740.csv`  :( \n",
-    "* Jan 2020: I started receiving CSV data from Govee that contained non-physical humidity data. Need to filter these out."
+    "* Jan 2020: I started receiving CSV data from Govee that contained non-physical humidity level changes. Need to filter these out.\n",
+    "* Mar 2020: I should also load the clean data and use that as the first filter for stuff I shouldn't load. That way I stop loading all the old files. Probably reverse iterate over the glob."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,13 +74,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "b'Skipping line 7137: expected 3 fields, saw 5\\n'\n",
       "b'Skipping line 20053: expected 3 fields, saw 5\\nSkipping line 23465: expected 3 fields, saw 5\\n'\n"
      ]
     }
@@ -96,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -188,15 +190,15 @@
        "</div>"
       ],
       "text/plain": [
-       "       relative_humidity  temperature_celsius           timestamp  location\n",
-       "2130                77.7                  4.3 2019-01-11 01:47:00         1\n",
-       "8153                51.6                 -6.3 2019-11-01 04:26:00         2\n",
-       "24166               64.6                  5.3 2019-11-02 09:53:00         2\n",
-       "52725               57.5                 -1.1 2019-01-08 05:48:00         2\n",
-       "63792               62.2                  5.6 2019-01-15 22:15:00         2"
+       "       relative_humidity temperature_celsius           timestamp  location\n",
+       "2130                77.7                 4.3 2019-01-11 01:47:00         1\n",
+       "8153                51.6                -6.3 2019-11-01 04:26:00         2\n",
+       "24166               64.6                 5.3 2019-11-02 09:53:00         2\n",
+       "52725               57.5                -1.1 2019-01-08 05:48:00         2\n",
+       "63792               62.2                 5.6 2019-01-15 22:15:00         2"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +265,7 @@
        "['sensor_data.csv']"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -345,15 +347,15 @@
        "</div>"
       ],
       "text/plain": [
-       "    relative_humidity  temperature_celsius           timestamp  location\n",
-       "30               36.4                  7.6 2019-11-09 15:30:00         1\n",
-       "31               36.5                  7.6 2019-11-09 15:31:00         1\n",
-       "32               36.8                  7.6 2019-11-09 15:32:00         1\n",
-       "33               36.9                  7.6 2019-11-09 15:33:00         1\n",
-       "34               37.6                  7.6 2019-11-09 15:34:00         1"
+       "    relative_humidity temperature_celsius           timestamp  location\n",
+       "30               36.4                 7.6 2019-11-09 15:30:00         1\n",
+       "31               36.5                 7.6 2019-11-09 15:31:00         1\n",
+       "32               36.8                 7.6 2019-11-09 15:32:00         1\n",
+       "33               36.9                 7.6 2019-11-09 15:33:00         1\n",
+       "34               37.6                 7.6 2019-11-09 15:34:00         1"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
