--- a/notebooks/data_scrubber.ipynb
+++ b/notebooks/data_scrubber.ipynb
@@ -18,12 +18,13 @@
     "* Jan 2020: Still getting clearly erroneous time stamps that go backward in time. Need to filter these out.\n",
     "* Jan 2020: I started receiving CSV data from Govee that contained extra columns. See `office_interior_export202001131740.csv`  :( \n",
     "* Jan 2020: I started receiving CSV data from Govee that contained non-physical humidity level changes. Need to filter these out.\n",
-    "* Mar 2020: I should also load the clean data and use that as the first filter for stuff I shouldn't load. That way I stop loading all the old files. Probably reverse iterate over the glob."
+    "* Mar 2020: I should also load the clean data and use that as the first filter for dates I shouldn't load. That way I stop loading all the old files. Probably reverse iterate over the glob.\n",
+    "    * If I do this, give myself a rewrite-all option also"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +38,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# invalidate any data points with a skip larger than this threshold\n",
+    "invalid_delta = pd.Timedelta('15.0 minutes')\n",
+    "\n",
+    "# bad_data = all_data[all_data.timestamp < invalid_prior_to]\n",
+    "# bad_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,11 +70,16 @@
     "                 'Temperature_Celsius', \n",
     "                 'Relative_Humidity']\n",
     "\n",
+    "def filter_single_dataset(df:pd.DataFrame=None):\n",
+    "    \n",
+    "    return df\n",
+    "\n",
     "def combine_no_time_duplicates(files_glob):\n",
     "    all_data = pd.DataFrame(columns=govee_columns)\n",
     "    for f in files_glob:\n",
     "        data = pd.read_csv(f, warn_bad_lines=True, error_bad_lines=False)\n",
     "        data.set_index(keys=govee_columns[0])\n",
+    "        data = filter_single_dataset(data)\n",
     "        all_data = pd.concat([all_data, data], \n",
     "                             ignore_index=True,\n",
     "                             join='inner',\n",
@@ -74,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +217,7 @@
        "63792               62.2                 5.6 2019-01-15 22:15:00         2"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +284,7 @@
        "['sensor_data.csv']"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -276,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -355,13 +374,103 @@
        "34               37.6                 7.6 2019-11-09 15:34:00         1"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "all_data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>relative_humidity</th>\n",
+       "      <th>temperature_celsius</th>\n",
+       "      <th>timestamp</th>\n",
+       "      <th>location</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>192478</th>\n",
+       "      <td>56.7</td>\n",
+       "      <td>8.1</td>\n",
+       "      <td>2020-03-15 18:07:00</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>192479</th>\n",
+       "      <td>56.7</td>\n",
+       "      <td>8.1</td>\n",
+       "      <td>2020-03-15 18:08:00</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>192480</th>\n",
+       "      <td>56.7</td>\n",
+       "      <td>8.1</td>\n",
+       "      <td>2020-03-15 18:09:00</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>192481</th>\n",
+       "      <td>56.7</td>\n",
+       "      <td>8.1</td>\n",
+       "      <td>2020-03-15 18:10:00</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>192482</th>\n",
+       "      <td>56.7</td>\n",
+       "      <td>8.1</td>\n",
+       "      <td>2020-03-15 18:11:00</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        relative_humidity temperature_celsius           timestamp  location\n",
+       "192478               56.7                 8.1 2020-03-15 18:07:00         2\n",
+       "192479               56.7                 8.1 2020-03-15 18:08:00         2\n",
+       "192480               56.7                 8.1 2020-03-15 18:09:00         2\n",
+       "192481               56.7                 8.1 2020-03-15 18:10:00         2\n",
+       "192482               56.7                 8.1 2020-03-15 18:11:00         2"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "all_data.tail()"
    ]
   },
   {
