--- a/notebooks/data_scrubber.ipynb
+++ b/notebooks/data_scrubber.ipynb
@@ -79,6 +79,10 @@
     "    for f in files_glob:\n",
     "        data = pd.read_csv(f, warn_bad_lines=True, error_bad_lines=False)\n",
     "        data.set_index(keys=govee_columns[0])\n",
+    "        \n",
+    "        # convert the correct column to datetime            \n",
+    "        data[govee_columns[0]] = pd.to_datetime(data[govee_columns[0]], infer_datetime_format=True, errors='coerce')\n",
+    "        \n",
     "        data = filter_single_dataset(data)\n",
     "        all_data = pd.concat([all_data, data], \n",
     "                             ignore_index=True,\n",
@@ -86,7 +90,8 @@
     "                             copy=True,\n",
     "                             sort=True)\n",
     "\n",
-    "    all_data[govee_columns[0]] = pd.to_datetime(all_data[govee_columns[0]], format=\"%Y-%m-%d %H:%M:%S\", errors='coerce')\n",
+    "    all_data[govee_columns[1]] = pd.to_numeric(all_data[govee_columns[1]], errors='coerce')\n",
+    "    all_data[govee_columns[2]] = pd.to_numeric(all_data[govee_columns[2]], errors='coerce')\n",
     "       \n",
     "    return all_data"
    ]
@@ -123,7 +128,9 @@
    "source": [
     "# combine into one\n",
     "all_data = pd.concat([all_exterior_data, all_interior_data])\n",
-    "all_data.rename(columns={govee_columns[0]: \"timestamp\", govee_columns[1]: str(govee_columns[1]).lower(), govee_columns[2]: str(govee_columns[2]).lower()},\n",
+    "all_data.rename(columns={govee_columns[0]: \"timestamp\", \n",
+    "                         govee_columns[1]: str(govee_columns[1]).lower(), \n",
+    "                         govee_columns[2]: str(govee_columns[2]).lower()},\n",
     "                inplace=True)"
    ]
   },
@@ -209,12 +216,12 @@
        "</div>"
       ],
       "text/plain": [
-       "       relative_humidity temperature_celsius           timestamp  location\n",
-       "2130                77.7                 4.3 2019-01-11 01:47:00         1\n",
-       "8153                51.6                -6.3 2019-11-01 04:26:00         2\n",
-       "24166               64.6                 5.3 2019-11-02 09:53:00         2\n",
-       "52725               57.5                -1.1 2019-01-08 05:48:00         2\n",
-       "63792               62.2                 5.6 2019-01-15 22:15:00         2"
+       "       relative_humidity  temperature_celsius           timestamp  location\n",
+       "2130                77.7                  4.3 2019-01-11 01:47:00         1\n",
+       "8153                51.6                 -6.3 2019-11-01 04:26:00         2\n",
+       "24166               64.6                  5.3 2019-11-02 09:53:00         2\n",
+       "52725               57.5                 -1.1 2019-01-08 05:48:00         2\n",
+       "63792               62.2                  5.6 2019-01-15 22:15:00         2"
       ]
      },
      "execution_count": 7,
@@ -366,12 +373,12 @@
        "</div>"
       ],
       "text/plain": [
-       "    relative_humidity temperature_celsius           timestamp  location\n",
-       "30               36.4                 7.6 2019-11-09 15:30:00         1\n",
-       "31               36.5                 7.6 2019-11-09 15:31:00         1\n",
-       "32               36.8                 7.6 2019-11-09 15:32:00         1\n",
-       "33               36.9                 7.6 2019-11-09 15:33:00         1\n",
-       "34               37.6                 7.6 2019-11-09 15:34:00         1"
+       "    relative_humidity  temperature_celsius           timestamp  location\n",
+       "30               36.4                  7.6 2019-11-09 15:30:00         1\n",
+       "31               36.5                  7.6 2019-11-09 15:31:00         1\n",
+       "32               36.8                  7.6 2019-11-09 15:32:00         1\n",
+       "33               36.9                  7.6 2019-11-09 15:33:00         1\n",
+       "34               37.6                  7.6 2019-11-09 15:34:00         1"
       ]
      },
      "execution_count": 12,
@@ -417,38 +424,38 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>211197</th>\n",
-       "      <td>64.4</td>\n",
-       "      <td>18.1</td>\n",
-       "      <td>2020-03-21 21:14:00</td>\n",
+       "      <th>255894</th>\n",
+       "      <td>61.1</td>\n",
+       "      <td>19.6</td>\n",
+       "      <td>2020-04-13 21:36:00</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>211198</th>\n",
-       "      <td>64.4</td>\n",
-       "      <td>18.1</td>\n",
-       "      <td>2020-03-21 21:15:00</td>\n",
+       "      <th>255895</th>\n",
+       "      <td>61.1</td>\n",
+       "      <td>19.6</td>\n",
+       "      <td>2020-04-13 21:37:00</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>211199</th>\n",
-       "      <td>64.4</td>\n",
-       "      <td>18</td>\n",
-       "      <td>2020-03-21 21:16:00</td>\n",
+       "      <th>255896</th>\n",
+       "      <td>61.0</td>\n",
+       "      <td>19.6</td>\n",
+       "      <td>2020-04-13 21:38:00</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>211200</th>\n",
-       "      <td>64.5</td>\n",
-       "      <td>18</td>\n",
-       "      <td>2020-03-21 21:17:00</td>\n",
+       "      <th>255897</th>\n",
+       "      <td>61.0</td>\n",
+       "      <td>19.5</td>\n",
+       "      <td>2020-04-13 21:39:00</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>211201</th>\n",
-       "      <td>64.5</td>\n",
-       "      <td>18</td>\n",
-       "      <td>2020-03-21 21:18:00</td>\n",
+       "      <th>255898</th>\n",
+       "      <td>61.0</td>\n",
+       "      <td>19.5</td>\n",
+       "      <td>2020-04-13 21:40:00</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -456,12 +463,12 @@
        "</div>"
       ],
       "text/plain": [
-       "        relative_humidity temperature_celsius           timestamp  location\n",
-       "211197               64.4                18.1 2020-03-21 21:14:00         2\n",
-       "211198               64.4                18.1 2020-03-21 21:15:00         2\n",
-       "211199               64.4                  18 2020-03-21 21:16:00         2\n",
-       "211200               64.5                  18 2020-03-21 21:17:00         2\n",
-       "211201               64.5                  18 2020-03-21 21:18:00         2"
+       "        relative_humidity  temperature_celsius           timestamp  location\n",
+       "255894               61.1                 19.6 2020-04-13 21:36:00         2\n",
+       "255895               61.1                 19.6 2020-04-13 21:37:00         2\n",
+       "255896               61.0                 19.6 2020-04-13 21:38:00         2\n",
+       "255897               61.0                 19.5 2020-04-13 21:39:00         2\n",
+       "255898               61.0                 19.5 2020-04-13 21:40:00         2"
       ]
      },
      "execution_count": 13,
