--- a/notebooks/data_scrubber.ipynb
+++ b/notebooks/data_scrubber.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -106,6 +106,7 @@
      "output_type": "stream",
      "text": [
       "b'Skipping line 7137: expected 3 fields, saw 5\\n'\n",
+      "b'Skipping line 26463: expected 3 fields, saw 5\\n'\n",
       "b'Skipping line 20053: expected 3 fields, saw 5\\nSkipping line 23465: expected 3 fields, saw 5\\n'\n"
      ]
     }
@@ -122,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +225,7 @@
        "63792               62.2                  5.6 2019-01-15 22:15:00         2"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -245,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +292,7 @@
        "['sensor_data.csv']"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -302,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -381,7 +382,7 @@
        "34               37.6                  7.6 2019-11-09 15:34:00         1"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -392,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -424,38 +425,38 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>266179</th>\n",
-       "      <td>55.3</td>\n",
-       "      <td>15.0</td>\n",
-       "      <td>2020-04-19 21:35:00</td>\n",
+       "      <th>319585</th>\n",
+       "      <td>60.5</td>\n",
+       "      <td>20.9</td>\n",
+       "      <td>2020-06-01 22:15:00</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>266180</th>\n",
-       "      <td>55.3</td>\n",
-       "      <td>15.0</td>\n",
-       "      <td>2020-04-19 21:36:00</td>\n",
+       "      <th>319586</th>\n",
+       "      <td>60.5</td>\n",
+       "      <td>20.9</td>\n",
+       "      <td>2020-06-01 22:16:00</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>266181</th>\n",
-       "      <td>55.3</td>\n",
-       "      <td>15.0</td>\n",
-       "      <td>2020-04-19 21:37:00</td>\n",
+       "      <th>319587</th>\n",
+       "      <td>60.6</td>\n",
+       "      <td>20.9</td>\n",
+       "      <td>2020-06-01 22:17:00</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>266182</th>\n",
-       "      <td>55.3</td>\n",
-       "      <td>15.0</td>\n",
-       "      <td>2020-04-19 21:38:00</td>\n",
+       "      <th>319588</th>\n",
+       "      <td>60.6</td>\n",
+       "      <td>20.9</td>\n",
+       "      <td>2020-06-01 22:18:00</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>266183</th>\n",
-       "      <td>55.3</td>\n",
-       "      <td>15.0</td>\n",
-       "      <td>2020-04-19 21:39:00</td>\n",
+       "      <th>319589</th>\n",
+       "      <td>60.6</td>\n",
+       "      <td>20.8</td>\n",
+       "      <td>2020-06-01 22:19:00</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -464,14 +465,14 @@
       ],
       "text/plain": [
        "        relative_humidity  temperature_celsius           timestamp  location\n",
-       "266179               55.3                 15.0 2020-04-19 21:35:00         2\n",
-       "266180               55.3                 15.0 2020-04-19 21:36:00         2\n",
-       "266181               55.3                 15.0 2020-04-19 21:37:00         2\n",
-       "266182               55.3                 15.0 2020-04-19 21:38:00         2\n",
-       "266183               55.3                 15.0 2020-04-19 21:39:00         2"
+       "319585               60.5                 20.9 2020-06-01 22:15:00         2\n",
+       "319586               60.5                 20.9 2020-06-01 22:16:00         2\n",
+       "319587               60.6                 20.9 2020-06-01 22:17:00         2\n",
+       "319588               60.6                 20.9 2020-06-01 22:18:00         2\n",
+       "319589               60.6                 20.8 2020-06-01 22:19:00         2"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
